force-app/main/default/objects/Trigger_switch__c/Trigger_switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to allow turn off triggers:
When given trigger is &quot;checked&quot; then trigger is deactivated.</description>
    <label>Trigger switch</label>
</CustomObject>