force-app/main/default/objects/Trigger_switch__c/fields/CaseSupplier__c.field-meta.xml
<CustomField>
    <fullName>CaseSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CaseSupplier</label>
    <type>Checkbox</type>
</CustomField>