force-app/main/default/objects/Trigger_switch__c/fields/CCSContract__c.field-meta.xml
<CustomField>
    <fullName>CCSContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a contract is inserted or edited and the Status is set to Open, add a Apex sharing to enable the Contract Customer Contact Read only access.  If the Status is changed to anything but Open then remove the share.</description>
    <label>CCSContract</label>
    <type>Checkbox</type>
</CustomField>