force-app/main/default/objects/Trigger_switch__c/fields/CheckUserOrgSector__c.field-meta.xml
<CustomField>
    <fullName>CheckUserOrgSector__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For each user, check the Org to see what Sector they belong too.  If they belong to &quot;Central Government Dept&quot; then upgrade them to the Customer Portal Plug liscence.  Else give them the Customer Portal Logib liscence.</description>
    <inlineHelpText>For each user, check the Org to see what Sector they belong too.  If they belong to &quot;Central Government Dept&quot; then upgrade them to the Customer Portal Plug liscence.  Else give them the Customer Portal Logib liscence.</inlineHelpText>
    <label>CheckUserOrgSector</label>
    <type>Checkbox</type>
</CustomField>