force-app/main/default/objects/Trigger_switch__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMessage</label>
    <type>Checkbox</type>
</CustomField>