force-app/main/default/objects/Trigger_switch__c/fields/MasterFrameworkLot__c.field-meta.xml
<CustomField>
    <fullName>MasterFrameworkLot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MasterFrameworkLot</label>
    <type>Checkbox</type>
</CustomField>