force-app/main/default/objects/Trigger_switch__c/fields/SyncUserandContact__c.field-meta.xml
<CustomField>
    <fullName>SyncUserandContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a logged in Portal user changes their profile settings, update the fields in the contact record to match.</description>
    <inlineHelpText>When a logged in Portal user changes their profile settings, update the fields in the contact record to match.</inlineHelpText>
    <label>SyncUserandContact</label>
    <type>Checkbox</type>
</CustomField>