force-app/main/default/objects/Trigger_switch__c/fields/UserContactRegistration__c.field-meta.xml
<CustomField>
    <fullName>UserContactRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a portal user is created, update the contact record and set the Company Name specified at registration into the Portal_Reg_Org_Name__c Field.</description>
    <inlineHelpText>When a portal user is created, update the contact record and set the Company Name specified at registration into the Portal_Reg_Org_Name__c Field.</inlineHelpText>
    <label>UserContactRegistration</label>
    <type>Checkbox</type>
</CustomField>